--- a/src/pure-azdo-pipeline.yml
+++ b/src/pure-azdo-pipeline.yml
@@ -15,8 +15,6 @@ stages:
       displayName: 'Build job'
       pool:
         vmImage: 'windows-latest'
-      variables:
-      - group: Integration-Build
       steps:
       # Dependencies
       - task: UseDotNet@2
@@ -62,8 +60,6 @@ stages:
     - job: 'DockerBuildandPush'
       pool:
         vmImage: 'ubuntu-latest'
-      variables:
-        - group: onion8-clean-start-tdd
       dependsOn: Build
  
       steps:
@@ -80,282 +76,9 @@ stages:
 
       - task: Docker@2
         inputs:
-          containerRegistry: 'ClearMeasureBootcamp'
+          containerRegistry: '$(AzureContainerRegistry)'
           repository: 'ClearMeasure.Bootcamp.ChurchBulletin.UI.Server'
           command: 'buildAndPush'
           Dockerfile: '**/Dockerfile'
           tags: |
             $(Build.BuildNumber)
-
-# Deploying to TDD
-- stage: 'TDD'
-  condition: false
-  displayName: 'TDD'
-  jobs:
-    - deployment: 'DeployToTDD'
-      pool:
-        vmImage: 'windows-latest'
-      variables:
-      - group: onion8-clean-start-tdd
-      - name: branch
-        value: $[coalesce(variables['system.pullRequest.sourceBranch'], variables['build.sourceBranch'])]
-      - name: TDDResourceGroup
-        value: '$(ResourceGroupName)-TDD-$(Build.BuildNumber)'
-      - name: Environment
-        value: 'tdd'
-      - name: databaseUser
-        value: '$(databaseUserTest)'
-      - name: databasePassword
-        value: '$(databasePasswordTest)'
-      - name: databaseName
-        value: '$(databaseNameTest)'
-      - name: containerAppName
-        value: '$(ContainerAppNameTest)'
-      - name: containerImage
-        value: '$(registryLoginServer)/churchbulletin.ui:$(Build.BuildNumber)'
-      - name: containerAppLogAnalyticsName
-        value: 'tdd-Log-Analytics'
-      - name: appInsightsName
-        value: 'onion-architecture-maui-azure-dotnet-8-TDD-Insights'
-      - name: appInsightsConnectionString
-        value: $(appInsightsConnectionStringTDD)
-      - name: AspnetcoreEnvironment
-        value: $(AspnetcoreEnvironmentTest)
-      - name: serviceConnection
-        value: $(serviceConnection)
-      environment: 'TDD'
-      strategy:
-        runOnce:
-          deploy:
-            steps:
-            
-            - template: .\deploy-env.yml
-            
-            - task: DownloadPackage@1
-              displayName: 'Download Acceptance Test Package'
-              inputs:
-                packageType: 'nuget'
-                feed: '$(AzureFeedName)'
-                view: 'Local'
-                definition: 'ChurchBulletin.AcceptanceTests'
-                version: '$(Build.Buildnumber)'
-                downloadPath: '$(System.DefaultWorkingDirectory)/tests'
-                extract: true
-
-            - task: PowerShell@2
-              displayName: 'Download Playwright'
-              inputs:
-                targetType: filePath
-                filePath: ./tests/playwright.ps1
-                arguments: 'install'
-
-            - task: VSTest@2
-              displayName: 'VsTest - AcceptanceTests'
-              inputs:
-                testSelector: 'testAssemblies'
-                testAssemblyVer2: |
-                  **\*AcceptanceTests.dll
-                  !**\*TestAdapter.dll
-                  !**\obj\**
-                  searchFolder: '$(System.DefaultWorkingDirectory)/tests'
-                uiTests: true
-                codeCoverageEnabled: true
-                testRunTitle: 'Acceptance Tests'
-                diagnosticsEnabled: True
-
-- stage: 'DeleteTDD'
-  condition: false
-  displayName: 'DeleteTDD'
-  dependsOn: TDD
-  jobs: 
-    - deployment: 'DeleteTDD'
-      pool:
-        vmImage: 'windows-latest'
-      variables:
-      - group: onion8-clean-start-tdd 
-      - name: branch
-        value: $[coalesce(variables['system.pullRequest.sourceBranch'], variables['build.sourceBranch'])] 
-      - name: TDD-Resource-Group
-        value: '$(ResourceGroupName)-TDD-$(Build.BuildNumber)'
-      - name: TDD-App-Name
-        value: tdd-ui 
-      environment: 'TDD'
-      strategy:
-        runOnce:
-          deploy:
-            steps:
-
-            - task: AzureCLI@2
-              inputs:
-                azureSubscription: 'onion-architecture-maui-azure-dotnet-8-pure-azdo'
-                scriptType: 'ps'
-                scriptLocation: 'inlineScript'
-                inlineScript: |
-                  az config set extension.use_dynamic_install=yes_without_prompt
-                  $containerAppURL = az containerapp show --resource-group $(TDD-Resource-Group) --name $(TDD-App-Name) --query properties.configuration.ingress.fqdn
-                  $containerAppURL = $containerAppURL -replace '"', ''
-                  [System.Environment]::SetEnvironmentVariable("containerAppURL", $containerAppURL, "User")
-
-            - task: AzureCLI@2
-              displayName: 'Delete TDD Resources'
-              inputs:
-                azureSubscription: 'onion-architecture-maui-azure-dotnet-8-pure-azdo'
-                scriptType: 'ps'
-                scriptLocation: 'inlineScript'
-                inlineScript: |
-                  az group delete -n $(TDD-Resource-Group) --yes
-
-- stage: 'UAT'
-  condition: false
-  displayName: 'UAT'
-  # dependsOn: TDD
-  jobs:
-    - deployment: 'DeployToUAT'
-      pool:
-        vmImage: 'windows-latest'
-      variables:
-      - group: onion8-clean-start-tdd
-      - name: branch
-        value: $[coalesce(variables['system.pullRequest.sourceBranch'], variables['build.sourceBranch'])]
-      - name: TDDResourceGroup
-        value: '$(ResourceGroupName)-UAT'
-      - name: Environment
-        value: 'uat'
-      - name: DatabaseUser
-        value: '$(DatabaseUserUAT)'
-      - name: DatabasePassword
-        value: '$(DatabasePasswordTest)'
-      - name: DatabaseName
-        value: '$(DatabaseNameUAT)'
-      - name: ContainerAppName
-        value: '$(ContainerAppNameUAT)'
-      - name: ContainerImage
-        value: '$(RegistryLoginServer)/churchbulletin.ui:$(Build.BuildNumber)'
-      - name: AppInsightsConnectionString
-        value: '$(AppInsightsConnectionStringUAT)'
-      - name: appInsightsName
-        value: 'onion-architecture-maui-azure-dotnet-8-UAT-Insights'
-      - name: containerAppLogAnalyticsName
-        value: 'UAT-Log-Analytics'
-      - name: SubscriptionId
-        value: $(SubscriptionId)
-      - name: AppInsightsConnectionString
-        value: $(AppInsightsConnectionStringUAT)
-      - name: AspnetcoreEnvironment
-        value: $(AspnetcoreEnvironmentUAT)
-      - name: serviceConnection
-        value: $(serviceConnection)
-      environment: 'UAT'
-      strategy:
-        runOnce:
-          deploy:
-            steps:
-            
-            - template: .\deploy-env.yml
-            
-            - task: DownloadPackage@1
-              displayName: 'Download Acceptance Test Package'
-              inputs:
-                packageType: 'nuget'
-                feed: '$(AzureFeedName)'
-                view: 'Local'
-                definition: 'ChurchBulletin.AcceptanceTests'
-                version: '$(Build.Buildnumber)'
-                downloadPath: '$(System.DefaultWorkingDirectory)/tests'
-                extract: true
-
-            - task: PowerShell@2
-              displayName: 'Download Playwright'
-              inputs:
-                targetType: filePath
-                filePath: ./tests/playwright.ps1
-                arguments: 'install'
-
-            - task: VSTest@2
-              displayName: 'VsTest - AcceptanceTests'
-              inputs:
-                testSelector: 'testAssemblies'
-                testAssemblyVer2: |
-                  **\*AcceptanceTests.dll
-                  !**\*TestAdapter.dll
-                  !**\obj\**
-                  searchFolder: '$(System.DefaultWorkingDirectory)/tests'
-                uiTests: true
-                codeCoverageEnabled: true
-                testRunTitle: 'Acceptance Tests'
-                diagnosticsEnabled: True
-
-- stage: 'Production'
-  condition: false
-  displayName: 'Prod'
-  jobs:
-    - deployment: 'DeployToProd'
-      pool:
-        vmImage: 'windows-latest'
-      variables:
-      - group: onion8-clean-start-tdd
-      - name: branch
-        value: $[coalesce(variables['system.pullRequest.sourceBranch'], variables['build.sourceBranch'])]
-      - name: TDDResourceGroup
-        value: '$(ResourceGroupName)-Prod'
-      - name: Environment
-        value: 'prod'
-      - name: DatabaseUser
-        value: '$(DatabaseUserProd)'
-      - name: DatabasePassword
-        value: '$(DatabasePasswordTest)'
-      - name: DatabaseName
-        value: '$(DatabaseNameProd)'
-      - name: ContainerAppName
-        value: '$(ContainerAppNameProd)'
-      - name: AppInsightsConnectionString
-        value: '$(AppInsightsConnectionStringProd)'
-      - name: appInsightsName
-        value: 'onion-architecture-maui-azure-dotnet-8-Prod-Insights'
-      - name: containerAppLogAnalyticsName
-        value: 'Prod-Log-Analytics'
-      - name: ContainerImage
-        value: '$(RegistryLoginServer)/churchbulletin.ui:$(Build.BuildNumber)'
-      - name: AspnetcoreEnvironment
-        value: $(AspnetcoreEnvironmentProd)
-      - name: serviceConnection
-        value: $(serviceConnection)
-      environment: 'Prod'
-      strategy:
-        runOnce:
-          deploy:
-            steps:
-            
-            - template: .\deploy-env.yml
-            
-            - task: DownloadPackage@1
-              displayName: 'Download Acceptance Test Package'
-              inputs:
-                packageType: 'nuget'
-                feed: '$(AzureFeedName)'
-                view: 'Local'
-                definition: 'ChurchBulletin.AcceptanceTests'
-                version: '$(Build.Buildnumber)'
-                downloadPath: '$(System.DefaultWorkingDirectory)/tests'
-                extract: true
-
-            - task: PowerShell@2
-              displayName: 'Download Playwright'
-              inputs:
-                targetType: filePath
-                filePath: ./tests/playwright.ps1
-                arguments: 'install'
-
-            - task: VSTest@2
-              displayName: 'VsTest - AcceptanceTests'
-              inputs:
-                testSelector: 'testAssemblies'
-                testAssemblyVer2: |
-                  **\*AcceptanceTests.dll
-                  !**\*TestAdapter.dll
-                  !**\obj\**
-                  searchFolder: '$(System.DefaultWorkingDirectory)/tests'
-                uiTests: true
-                codeCoverageEnabled: true
-                testRunTitle: 'Acceptance Tests'
-                diagnosticsEnabled: True
