--- a/src/pure-azdo-pipeline.yml
+++ b/src/pure-azdo-pipeline.yml
@@ -22,6 +22,11 @@ stages:
         inputs:
           packageType: 'sdk'
           version: '9.0.302'
+      - task: UseDotNet@2
+        displayName: 'Install SDK 6.0.0'
+        inputs:
+          packageType: 'sdk'
+          version: '6.0.0'
       # Set environment variables
       - task: PowerShell@2
         inputs:
