--- a/src/pure-azdo-pipeline.yml
+++ b/src/pure-azdo-pipeline.yml
@@ -105,7 +105,7 @@ stages:
                 azureSubscription: '$(AzureSubscription)'
                 scriptType: 'ps'
                 scriptLocation: 'inlineScript'
-                inlineScript: az containerapp update --name $(containerAppName) --resource-group $(Release.EnvironmentName) --image $(containerImage) --set-env-vars ConnectionStrings__SqlConnectionString="$(DbConnString)" 
+                inlineScript: az containerapp update --name $(containerAppName) --resource-group bootcamp-tdd --image $(containerImage) --set-env-vars ConnectionStrings__SqlConnectionString="$(DbConnString)" 
 
             - task: DownloadPackage@1
               displayName: 'Download Acceptance Test Package'
