--- a/src/UI/Server/appsettings.Development.json
+++ b/src/UI/Server/appsettings.Development.json
@@ -8,7 +8,7 @@
       "Microsoft.AspNetCore.StaticFiles": "Warning"
     }
   },
-  "OpenTelemetry": {
-    "ConnectionString": ""
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=586d68ed-85bc-4092-ac8a-fabb7a583e93;IngestionEndpoint=https://centralus-2.in.applicationinsights.azure.com/;LiveEndpoint=https://centralus.livediagnostics.monitor.azure.com/;ApplicationId=5328e763-3c56-4eae-ad66-aa528a92e984"
   }
 }
