adding screenshots to clicking of all tests.  and new setting.

--- a/src/AcceptanceTests/appsettings.acceptancetests.json
+++ b/src/AcceptanceTests/appsettings.acceptancetests.json
@@ -6,5 +6,6 @@
   "ApplicationBaseUrl": "https://localhost:7174",
   //"ApplicationBaseUrl": "https://ui.jollyrock-83034b8a.centralus.azurecontainerapps.io",
   "StartLocalServer": "true",
-  "SlowMo": "1000"
+  "SkipScreenshotsForSpeed": "true",
+  "SlowMo": "100"
 }
