--- a/src/UI/Server/appsettings.Development.json
+++ b/src/UI/Server/appsettings.Development.json
@@ -2,7 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Information",
+      "Microsoft.AspNetCore": "Warning",
       "Microsoft.AspNetCore.Mvc": "Warning",
       "Microsoft.AspNetCore.Hosting": "Warning",
       "Microsoft.AspNetCore.StaticFiles": "Warning"
