--- a/src/UI/Client/UI.Client.csproj
+++ b/src/UI/Client/UI.Client.csproj
@@ -18,6 +18,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.AI.OpenAI" Version="2.1.0" />
+    <PackageReference Include="Azure.Core" Version="1.46.1" />
     <PackageReference Include="BlazorApplicationInsights" Version="3.2.1" />
     <PackageReference Include="BlazorMvc" Version="2.1.1" />
     <PackageReference Include="MediatR" Version="12.4.1" />
