Change connection strings

--- a/src/AcceptanceTests/appsettings.acceptancetests.json
+++ b/src/AcceptanceTests/appsettings.acceptancetests.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnectionString": "server=(LocalDb)\\MSSQLLocalDB;database=ChurchBulletin;Integrated Security=true;"
+    "SqlConnectionString": "server=localhost\\SQLEXPRESS;database=ChurchBulletin;Integrated Security=true;TrustServerCertificate=True;"
     //"SqlConnectionString": "Server=tcp:bootcamp-palermo-workorders.database.windows.net,1433;Initial Catalog=ChurchBulletin;User ID=tdd;Password=hsimpson123!;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "ApplicationBaseUrl": "https://localhost:7174",
