--- a/src/UI/Server/Properties/launchSettings.json
+++ b/src/UI/Server/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "ConnectionStrings__SqlConnectionString": "server=(LocalDb)\\MSSQLLocalDB;database=ChurchBulletin;Integrated Security=true;",
+        "ConnectionStrings__SqlConnectionString": "server=localhost\\SQLEXPRESS;database=ChurchBulletin;Integrated Security=true;TrustServerCertificate=True",
         "APPLICATIONINSIGHTS_CONNECTION_STRING": "InstrumentationKey=62370908-c8ab-42cb-85ca-e08f56998971;IngestionEndpoint=https://southcentralus-3.in.applicationinsights.azure.com/;LiveEndpoint=https://southcentralus.livediagnostics.monitor.azure.com/;ApplicationId=38d77475-c6fa-47a0-9488-e9d6b88c6a7b"
       },
       "dotnetRunMessages": true,
