Update pure-azdo-pipeline.yml for Azure Pipelines

--- a/src/pure-azdo-pipeline.yml
+++ b/src/pure-azdo-pipeline.yml
@@ -157,9 +157,10 @@ stages:
                 codeCoverageEnabled: true
                 testRunTitle: 'Acceptance Tests'
                 diagnosticsEnabled: True
-                rerunFailedTestCasesMaxLimit: 2
+                rerunFailedTestCasesMaxLimit: 3
                 rerunFailedTests: true
                 rerunMaxAttempts: 2
+                rerunType: basedOnTestFailureCount
 
 
 # Deploying to UAT
