--- a/src/UI.Shared/UI.Shared.csproj
+++ b/src/UI.Shared/UI.Shared.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="BlazorApplicationInsights" Version="3.2.1" />
     <PackageReference Include="BlazorMvc" Version="2.1.1" />
+    <PackageReference Include="Microsoft.ApplicationInsights" Version="2.23.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.7" />
     <PackageReference Include="MediatR" Version="12.4.1" />
