--- a/src/AcceptanceTests/appsettings.acceptancetests.json
+++ b/src/AcceptanceTests/appsettings.acceptancetests.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnectionString": "server=(LocalDb)\\MSSQLLocalDB;database=ChurchBulletin;Integrated Security=true;"
+    "SqlConnectionString": "server=(LocalDb)\\MSSQLLocalDB;database=ChurchBulletin_20251103102011_WKwA;Integrated Security=true;"
   },
   "ApplicationBaseUrl": "https://localhost:7174",
   "StartLocalServer": "true",
