--- a/src/AcceptanceTests/appsettings.acceptancetests.json
+++ b/src/AcceptanceTests/appsettings.acceptancetests.json
@@ -1,9 +1,9 @@
 {
-    "ConnectionStrings":  {
-                              "SqlConnectionString":  "server=(LocalDb)\\MSSQLLocalDB;database=ChurchBulletin;Integrated Security=true;"
-                          },
-    "ApplicationBaseUrl":  "https://localhost:7174",
-    "StartLocalServer":  "true",
-    "SkipScreenshotsForSpeed":  "true",
-    "SlowMo":  "100"
+  "ConnectionStrings": {
+    "SqlConnectionString": "server=localhost;database=ChurchBulletin_20251111085936_KFqZ;Integrated Security=true;"
+  },
+  "ApplicationBaseUrl": "https://localhost:7174",
+  "StartLocalServer": "true",
+  "SkipScreenshotsForSpeed": "true",
+  "SlowMo": "100"
 }
