--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <PackageReference Include="AliaSQL" Version="2.0.0" />
+    <PackageReference Include="DbUp" Version="5.0.41" />
+    <PackageReference Include="dbup-sqlserver" Version="6.0.16" />
 
   </ItemGroup>
 
