--- a/src/AcceptanceTests/appsettings.acceptancetests.json
+++ b/src/AcceptanceTests/appsettings.acceptancetests.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnectionString": "server=localhost;database=ChurchBulletin_20251111085936_KFqZ;Integrated Security=true;"
+    "SqlConnectionString": "server=localhost;database=ChurchBulletin;Integrated Security=true;"
   },
   "ApplicationBaseUrl": "https://localhost:7174",
   "StartLocalServer": "true",
