--- a/src/AcceptanceTests/appsettings.acceptancetests.json
+++ b/src/AcceptanceTests/appsettings.acceptancetests.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnectionString": "server=localhost;database=ChurchBulletin;Integrated Security=true;"
+    "SqlConnectionString": "Data Source=localhost;Initial Catalog=ChurchBulletin_20251112080931_athM;User ID=sa;Password=ChurchBulletin_20251112080931_athM;TrustServerCertificate=true;Integrated Security=false;Encrypt=false"
   },
   "ApplicationBaseUrl": "https://localhost:7174",
   "StartLocalServer": "true",
