Use PrivateBuild, not CI Build for now.

--- a/src/pure-azdo-pipeline.yml
+++ b/src/pure-azdo-pipeline.yml
@@ -46,7 +46,7 @@ stages:
         inputs:
           targetType: filePath
           filePath: ./build_linux.ps1
-          arguments: '; CIBuild'
+          arguments: '; PrivateBuild'
       - task: PublishTestResults@2
         displayName: 'Publish Test Results ./build/test/*.trx'
         inputs:
